Update crowdin translations

--- a/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
@@ -1751,4 +1751,4 @@
 "Your email seems to be invalid" = "البريد الالكتروني الخاص بك غير صحيح";
 
 /* paint */
-"Zoom" = "تكبير/تصغير";
+"Zoom" = "Zoom";
