--- a/src/Catty/Resources/Localization/es.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/es.lproj/Localizable.strings
@@ -1751,4 +1751,4 @@
 "Your email seems to be invalid" = "Tu correo electrónico parece ser no válido";
 
 /* paint */
-"Zoom" = "Aumentar/Disminuir";
+"Zoom" = "Zoom";
