--- a/src/Catty/Resources/Localization/ru.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ru.lproj/Localizable.strings
@@ -1751,4 +1751,4 @@
 "Your email seems to be invalid" = "Ваш электронный адрес, похоже, не действителен.";
 
 /* paint */
-"Zoom" = "Масштаб";
+"Zoom" = "Zoom";
