--- a/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
@@ -1751,4 +1751,4 @@
 "Your email seems to be invalid" = "E-posta adresiniz geçersiz görünüyor";
 
 /* paint */
-"Zoom" = "Yakınlaştır";
+"Zoom" = "Zoom";
