--- a/src/Catty/Resources/Localization/vi.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/vi.lproj/Localizable.strings
@@ -1751,4 +1751,4 @@
 "Your email seems to be invalid" = "Email của bạn có vẻ là không hợp lệ";
 
 /* paint */
-"Zoom" = "Phóng to";
+"Zoom" = "Zoom";
