--- a/src/Catty/Resources/Localization/el.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/el.lproj/Localizable.strings
@@ -311,7 +311,7 @@
 "December" = "December";
 
 /* No comment provided by engineer. */
-"degrees" = "degrees";
+"degrees" = "μοίρες";
 
 /* No comment provided by engineer. */
 "Delete" = "Διαγραφή";
