--- a/src/Catty/Resources/Localization/hu.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/hu.lproj/Localizable.strings
@@ -1751,4 +1751,4 @@
 "Your email seems to be invalid" = "A megadott e-mail cim érvénytelennek tűnik";
 
 /* paint */
-"Zoom" = "Nagyítás";
+"Zoom" = "Zoom";
